--- a/HTML/Lesson_2/blue blocks.html
+++ b/HTML/Lesson_2/blue blocks.html
@@ -12,13 +12,15 @@
 <body>
 
 <div class="general">
-    <div class="widgets"></div>
-    <div class="cards">
-        <div class="middle"></div>
-        <div class="middle"></div>
-        <div class="middle"></div>
+    <div class="w600">
+        <div class="widgets"></div>
+        <div class="cards">
+            <div class="middle"></div>
+            <div class="middle"></div>
+            <div class="middle"></div>
+        </div>
+        <div class="contact"></div>
     </div>
-    <div class="contact"></div>
 </div>
 
 </body>
